modules/lib/src/main/java/com/github/auties00/cobalt/call/transport/sctp/bindings/UsrSctp.java


        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ssize_t usrsctp_recvv(struct socket *so, void *dbuf, size_t len, struct sockaddr *from, socklen_t *fromlen, void *info, socklen_t *infolen, unsigned int *infotype, int *msg_flags)
     * }
     */
    public static FunctionDescriptor usrsctp_recvv$descriptor() {
        return usrsctp_recvv.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ssize_t usrsctp_recvv(struct socket *so, void *dbuf, size_t len, struct sockaddr *from, socklen_t *fromlen, void *info, socklen_t *infolen, unsigned int *infotype, int *msg_flags)
     * }
     */
    public static MethodHandle usrsctp_recvv$handle() {
        return usrsctp_recvv.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ssize_t usrsctp_recvv(struct socket *so, void *dbuf, size_t len, struct sockaddr *from, socklen_t *fromlen, void *info, socklen_t *infolen, unsigned int *infotype, int *msg_flags)
     * }
     */
    public static MemorySegment usrsctp_recvv$address() {
        return usrsctp_recvv.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ssize_t usrsctp_recvv(struct socket *so, void *dbuf, size_t len, struct sockaddr *from, socklen_t *fromlen, void *info, socklen_t *infolen, unsigned int *infotype, int *msg_flags)
     * }
     */
    public static long usrsctp_recvv(MemorySegment so, MemorySegment dbuf, long len, MemorySegment from, MemorySegment fromlen, MemorySegment info, MemorySegment infolen, MemorySegment infotype, MemorySegment msg_flags) {
        var mh$ = usrsctp_recvv.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("usrsctp_recvv", so, dbuf, len, from, fromlen, info, infolen, infotype, msg_flags);
            }
            return (long)mh$.invokeExact(so, dbuf, len, from, fromlen, info, infolen, infotype, msg_flags);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class usrsctp_bind {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            UsrSctp.C_INT,
            UsrSctp.C_POINTER,
            UsrSctp.C_POINTER,
            UsrSctp.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("usrsctp_bind");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int usrsctp_bind(struct socket *so, struct sockaddr *name, socklen_t namelen)
     * }
     */
    public static FunctionDescriptor usrsctp_bind$descriptor() {
        return usrsctp_bind.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int usrsctp_bind(struct socket *so, struct sockaddr *name, socklen_t namelen)
     * }
     */
    public static MethodHandle usrsctp_bind$handle() {
        return usrsctp_bind.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int usrsctp_bind(struct socket *so, struct sockaddr *name, socklen_t namelen)
     * }
     */
    public static MemorySegment usrsctp_bind$address() {
        return usrsctp_bind.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int usrsctp_bind(struct socket *so, struct sockaddr *name, socklen_t namelen)
     * }
     */
    public static int usrsctp_bind(MemorySegment so, MemorySegment name, int namelen) {
        var mh$ = usrsctp_bind.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("usrsctp_bind", so, name, namelen);
            }
            return (int)mh$.invokeExact(so, name, namelen);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class usrsctp_listen {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            UsrSctp.C_INT,
            UsrSctp.C_POINTER,
            UsrSctp.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("usrsctp_listen");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int usrsctp_listen(struct socket *so, int backlog)
     * }
     */
    public static FunctionDescriptor usrsctp_listen$descriptor() {
        return usrsctp_listen.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int usrsctp_listen(struct socket *so, int backlog)
     * }
     */
    public static MethodHandle usrsctp_listen$handle() {
        return usrsctp_listen.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int usrsctp_listen(struct socket *so, int backlog)
     * }
     */
    public static MemorySegment usrsctp_listen$address() {
        return usrsctp_listen.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int usrsctp_listen(struct socket *so, int backlog)
     * }
     */
    public static int usrsctp_listen(MemorySegment so, int backlog) {
        var mh$ = usrsctp_listen.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("usrsctp_listen", so, backlog);
            }
            return (int)mh$.invokeExact(so, backlog);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class usrsctp_accept {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            UsrSctp.C_POINTER,
            UsrSctp.C_POINTER,
            UsrSctp.C_POINTER,
            UsrSctp.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("usrsctp_accept");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct socket *usrsctp_accept(struct socket *so, struct sockaddr *aname, socklen_t *anamelen)
     * }
     */
    public static FunctionDescriptor usrsctp_accept$descriptor() {
        return usrsctp_accept.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct socket *usrsctp_accept(struct socket *so, struct sockaddr *aname, socklen_t *anamelen)
     * }
     */
    public static MethodHandle usrsctp_accept$handle() {
        return usrsctp_accept.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * struct socket *usrsctp_accept(struct socket *so, struct sockaddr *aname, socklen_t *anamelen)
     * }
     */
    public static MemorySegment usrsctp_accept$address() {
        return usrsctp_accept.ADDR;
    }

    /**
     * {@snippet lang=c :
     * struct socket *usrsctp_accept(struct socket *so, struct sockaddr *aname, socklen_t *anamelen)
     * }
     */
    public static MemorySegment usrsctp_accept(MemorySegment so, MemorySegment aname, MemorySegment anamelen) {
        var mh$ = usrsctp_accept.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("usrsctp_accept", so, aname, anamelen);
            }
            return (MemorySegment)mh$.invokeExact(so, aname, anamelen);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class usrsctp_peeloff {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            UsrSctp.C_POINTER,
            UsrSctp.C_POINTER,
            UsrSctp.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("usrsctp_peeloff");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct socket *usrsctp_peeloff(struct socket *, sctp_assoc_t)
     * }
     */
    public static FunctionDescriptor usrsctp_peeloff$descriptor() {
        return usrsctp_peeloff.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct socket *usrsctp_peeloff(struct socket *, sctp_assoc_t)
     * }
     */
    public static MethodHandle usrsctp_peeloff$handle() {
        return usrsctp_peeloff.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * struct socket *usrsctp_peeloff(struct socket *, sctp_assoc_t)
     * }
     */
    public static MemorySegment usrsctp_peeloff$address() {
        return usrsctp_peeloff.ADDR;
    }

    /**
     * {@snippet lang=c :
     * struct socket *usrsctp_peeloff(struct socket *, sctp_assoc_t)
     * }
     */
    public static MemorySegment usrsctp_peeloff(MemorySegment x0, int x1) {
        var mh$ = usrsctp_peeloff.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("usrsctp_peeloff", x0, x1);
            }
            return (MemorySegment)mh$.invokeExact(x0, x1);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class usrsctp_connect {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            UsrSctp.C_INT,
            UsrSctp.C_POINTER,
            UsrSctp.C_POINTER,
            UsrSctp.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("usrsctp_connect");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int usrsctp_connect(struct socket *so, struct sockaddr *name, socklen_t namelen)
     * }
     */
    public static FunctionDescriptor usrsctp_connect$descriptor() {
        return usrsctp_connect.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int usrsctp_connect(struct socket *so, struct sockaddr *name, socklen_t namelen)
     * }
     */
    public static MethodHandle usrsctp_connect$handle() {
        return usrsctp_connect.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int usrsctp_connect(struct socket *so, struct sockaddr *name, socklen_t namelen)
     * }
     */
    public static MemorySegment usrsctp_connect$address() {
        return usrsctp_connect.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int usrsctp_connect(struct socket *so, struct sockaddr *name, socklen_t namelen)
     * }
     */
    public static int usrsctp_connect(MemorySegment so, MemorySegment name, int namelen) {
        var mh$ = usrsctp_connect.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("usrsctp_connect", so, name, namelen);
            }
            return (int)mh$.invokeExact(so, name, namelen);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class usrsctp_close {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            UsrSctp.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("usrsctp_close");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
